<resources>
    <string name="app_name">DeepSpace</string>
    <string name="nasa">NASA</string>
    <string name="asteroid_radar">Asteroid Radar</string>
    <string name="mars_rovers">Mars Rovers</string>
    <string name="spacex">SpaceX</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="about">About</string>
    <string name="contact">Feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launches">Launches</string>
    <string name="explore">Explore</string>
    <string name="history">History</string>
    <string name="tesla_roadster">Tesla Roadster</string>
    <string name="where_is_starman">Where is Starman?</string>
    <string name="dragon_space_capsules">Dragon space capsules</string>
    <string name="all_spacex_capsules_list">All SpaceX capsules list</string>
    <string name="cores_used_in_spacex_aircrafts">Cores used in SpaceX aircrafts</string>
    <string name="where_does_spacex_aircrafts_land_on">Where does SpaceX aircrafts land on?</string>
    <string name="launching_and_landing_pads">Launching and Landing pads</string>
    <string name="cores">Cores</string>
    <string name="capsules_list">Capsules list</string>
    <string name="dragons">Dragons</string>
    <string name="what_is_spacex">What is SpaceX?</string>
    <string name="learn_about_company">Learn about company</string>
    <string name="launch_pads">Launching pads</string>
    <string name="land_pads">Landing pads</string>
    <string name="email_or_username">E-Mail</string>
    <string name="cancel">Cancel</string>
    <string name="send_mail">Send</string>
    <string name="relogin">Please follow the link and login one more time</string>
    <string name="password">Password</string>
    <string name="password_again">Confirm password</string>
    <string name="login">sign in</string>
    <string name="wrong_credits">wrong credentials</string>
    <string name="notHaveAcc">Don`t have an account yet? Sign up!</string>
    <string name="register"><u>Sign up</u></string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="auth">Authentication</string>
    <string name="registration">Registration</string>
    <string name="emptyField">This field must be filled</string>
    <string name="userAlreadyRegistered">User already registered</string>
    <string name="reg_title">Sign up</string>
    <string name="send">send</string>
    <string name="lastName">last name</string>
    <string name="email">email</string>
    <string name="passwordRepeatDontMatch">passwords isn\'t same</string>
    <string name="invalidEmail">invalid email</string>
    <string name="username">Username</string>
    <string name="log_in">log in</string>
    <string name="create_your_own_post">Create your own post</string>
    <string name="edit_text_hint">Start typing here</string>
    <string name="home">Home</string>
    <string name="title_is_null_message">Empty title, interesting</string>
    <string name="rocket">Rocket:</string>
    <string name="first_stage">First stage:</string>
    <string name="second_stage">Second stage:</string>
    <string name="fairings">Fairings:</string>
    <string name="nasa_news">NASA news</string>
    <string name="events">Events</string>
    <string name="show_more">Show more</string>
    <string name="spacex_card_title">All about SpaceX</string>
    <string name="spacex_card_description">Information about launches, space capsules, how it all started and even more.</string>
    <string name="loading_error_message">An error occurred while loading the content, please check the network connection</string>
    <string name="retry">Retry</string>
    <string name="click_on_the_image_hint">Click on the image to view description</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="description_upcoming">Set notifications for the dates of upcoming SpaceX launches, so as not to miss the event\'s live broadcasts, discussions and so on</string>
    <string name="space_nav">Space Navigator</string>
    <string name="default_error">An unexpected error has occurred</string>
    <string name="proximity">Proximity</string>
    <string name="rotation_vector">Rotation vector</string>
    <string name="down_line">________</string>
    <string name="sensors">Sensors</string>
    <string name="rotation_matrix">Rotation matrix</string>
    <string name="light_level">Light level</string>
    <string name="compass">Compass</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="source_colon_space">Source: </string>
    <string name="comment">Comment</string>
    <string name="create_post">Create post</string>
    <string name="title">Title</string>
    <string name="company_info">Company info</string>
    <string name="company_spacex">Company : SpaceX</string>
    <string name="text">Text</string>
    <string name="asteroid_name">Asteroid name:</string>
    <string name="user_posts">User posts</string>
    <string name="blogs">Blogs</string>
    <string name="blogs_and_news"><![CDATA[Blogs & News]]></string>
    <string name="about_app"> Dive into the world of space! Read space news, communicate with the other space-lovers and always know where planets are located at the current moment by using space navigator!</string>
    <string name="developers">Developers: </string>
    <string name="copiedToClipboard">%1$s email copied to clipboard</string>
    <string name="title_for_feedback">Title</string>
    <string name="name_for_feedback">Your name</string>
    <string name="email_for_feedback">Your contact email</string>
    <string name="text_for_feedback">Describe the complaint</string>
    <string name="button_text_for_feedback">Send feedback</string>
    <string name="feedback_sent">Your feedback was sent! You will be replied by email </string>
    <string name="create_by_space_colon">"Created by: "</string>
    <string name="reply_to">"reply to "</string>
    <string name="article">Article</string>
    <string name="post">Post</string>
    <string name="yana_gladkikh">Yana Gladkikh</string>
    <string name="denis_barov">Denis Barov</string>
    <string name="vladimir_abubakirov">Vladimir Abubakirov</string>
    <string name="samuil_nalisin">Samuil Nalisin</string>
    <string name="danil_khairulin">Danil Khairulin</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unexpected_error">Произошла непредвиденная ошибка.</string>
    <string name="date">Date:</string>
    <string name="curiosity">Curiosity</string>
    <string name="earth">Earth</string>
    <string name="core">Core:</string>
    <string name="mission">Mission:</string>
    <string name="landedn_on_water">Landed on water?</string>
    <string name="blocks">Blocks:</string>
    <string name="reused">Reused:</string>
    <string name="what_are_dragons">What are Dragons?</string>
    <string name="rover_name">Rover name:</string>
    <string name="launching_date">Launching date:</string>
    <string name="status">Status:</string>
    <string name="active">Active</string>
    <string name="camera">Camera:</string>
    <string name="click_to_view_the_area">Click to view the area</string>
    <string name="name">Name:</string>
    <string name="vehicles_launched">Vehicles launched:</string>
    <string name="attempted_successful_launches">Attempted/Successful launches:</string>
    <string name="landing_type">Landing type:</string>
    <string name="reconnect">Reconnect</string>
    <string name="launch_mass_kg">Launch mass (Kg):</string>
    <string name="orbit_type">Orbit type:</string>
    <string name="longtitude">Longtitude:</string>
    <string name="distance_from_the_earth">Distance from the Earth:</string>
    <string name="distance_from_the_mars">Distance from the Mars:</string>
    <string name="details">Details:</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="company_name">Company name:</string>
    <string name="founder">Founder:</string>
    <string name="elon_musk">Elon Musk</string>
    <string name="founded">Founded:</string>
    <string name="_2002">2002</string>
    <string name="employees">Employees:</string>
    <string name="vehicles">Vehicles:</string>
    <string name="launch_sites">Launch sites:</string>
    <string name="chief_executive_officer">Chief Executive Officer:</string>
    <string name="chief_technology_officer">Chief Technology Officer:</string>
    <string name="chief_operating_officer">Chief Operating Officer:</string>
    <string name="cto_propulsion">CTO propulsion:</string>
    <string name="valuation">Valuation:</string>
    <string name="summary">Summary:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="california">California</string>
    <string name="astronomical_picture_of_the_day">astronomical picture of the day</string>
    <string name="mars_rover_photos">Mars Rover Photos</string>
    <string name="choose_date">Choose date</string>
    <string name="distance_from_earth">Distance from earth:</string>
    <string name="is_it_dangerous">Is it dangerous?</string>
    <string name="estimated_diameter">Estimated diameter:</string>
    <string name="moon_description">The Moon is Earth\'s only natural satellite. At about one-quarter the diameter of Earth (comparable to the width of Australia), it is the largest natural satellite in the Solar System relative to the size of its planet, the fifth largest satellite in the Solar System overall, and is larger than any known dwarf planet. Orbiting Earth at an average distance of 384,400 km (238,900 mi),or about 30 times Earth\'s diameter, its gravitational influence slightly lengthens Earth's day and is the main driver of Earth's tides. The Moon is classified as a planetary-mass object and a differentiated rocky body, and lacks any significant atmosphere, hydrosphere, or magnetic field. Its surface gravity is about one-sixth of Earth's (0.1654 g)</string>
    <string name="mercury_description">Mercury is the smallest planet in the Solar System and the closest to the Sun. Its orbit around the Sun takes 87.97 Earth days, the shortest of all the Sun\'s planets. It is named after the Roman god Mercurius (Mercury), god of commerce, messenger of the gods, and mediator between gods and mortals, corresponding to the Greek god Hermes. Like Venus, Mercury orbits the Sun within Earth\'s orbit as an inferior planet, and its apparent distance from the Sun as viewed from Earth never exceeds 28°. This proximity to the Sun means the planet can only be seen near the western horizon after sunset or the eastern horizon before sunrise, usually in twilight. At this time, it may appear as a bright star-like object, but is more difficult to observe than Venus. From Earth, the planet telescopically displays the complete range of phases, similar to Venus and the Moon, which recurs over its synodic period of approximately 116 days.</string>
</resources>