<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="60dp"
            android:layout_height="220dp"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            android:src="@drawable/falcon_img" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rocket"
                android:textSize="20sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rocket_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Rocket name : Falcon 1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rocket_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Rocket type : MerlinA"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_stage"
                android:textSize="20sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_stage"
                android:textSize="20sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fairings"
                android:textSize="20sp"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>